--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
-    "mongoose": "^8.18.2"
+    "mongoose": "^8.18.2",
+    "@aws-sdk/client-s3": "^3.645.0",
+    "@aws-sdk/s3-request-presigner": "^3.645.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
