--- a/eco-learn/package.json
+++ b/eco-learn/package.json
@@ -12,7 +12,9 @@
     "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "chart.js": "^4.4.4",
+    "react-chartjs-2": "^5.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
